# pdf2md_cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
pdf2md_cli/: __init__.py  api.py  auth.py  cli.py  feature_flags.py  inputs.py  pipeline.py  retry.py  types.py  ui.py
pdf2md_cli/backends/: glm.py  mistral.py  mock.py  registry.py
scripts/: purge_mistral_files.py
tests/: test_api.py  test_glm_backend.py  test_mock_backend.py
